# libcamera_ros

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  generate.sh  make_install_libcamera.sh.in  package.xml
.ci/: build_package.sh  libcameraConfig.cmake
.github/workflows/: generic_package_build.yml
include/: .gitignore  README
include/libcamera_ros/: libcamera_ros.h
src/: libcamera_ros_wrapper.cpp
