<?xml version="1.0"?>
<package format="2">

  <name>libcamera_ros</name>

  <version>0.2.0</version>

  <description>ROS wrapper around the raspberrypi/libcamera library.</description>

  <maintainer email="vojtech.spurny@fel.cvut.cz">Vojtech Spurny</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>LGPL-2.1</license>

  <url>https://github.com/raspberrypi/libcamera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>git</depend>
  <depend>python3-yaml</depend>
  <depend>python3-ply</depend>
  <depend>python3-jinja2</depend>
  <depend>openssl</depend>
  <depend>cmake_modules</depend>
  <depend>roscpp</depend>
  <depend>yaml</depend>
  <depend>libssl-dev</depend>
  <depend>libudev-dev</depend>

  <export>
  </export>

</package>
